fix: trying to do spacing

--- a/style.css
+++ b/style.css
@@ -265,5 +265,14 @@ section.contact h5 {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 10px;
+    margin: 6rem 0px 1rem 0px;
 }
+
+section.contact .card-body {
+    width: 30rem;
+}
+
+section.contact .card {
+    width: 500px;
+}
+
